Revert back to presto/trino release 348